--- a/index.html
+++ b/index.html
@@ -8,16 +8,165 @@
   </head>
   <body>
     <header>
-      <a href=""><img src="./images/Logo.svg" alt="logo" /></a>
+      <a href=""
+        ><img src="./images/Logo.svg" alt="logo" width="41" height="39"
+      /></a>
+      <nav>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">Blogs</a></li>
+        </ul>
+      </nav>
+      <button type="button">Gift Finder</button>
+    </header>
+
+    <main>
+      <!-- Hero Side -->
+      <section>
+        <h1>Find a gift for your wife or girlfriend</h1>
+        <p>
+          Struggling to find a gift for your wife or girlfriend? No problem!
+        </p>
+        <button type="button">Find gift now</button>
+        <img
+          src="./images/main-background.jpg"
+          alt="photo main-background"
+          width="719"
+          height="700"
+        />
+      </section>
+
+      <!-- Feature Split -->
+      <img
+        src="./images/media- background.jpg"
+        alt="photo media background"
+        width="733"
+        height="619"
+      />
+      <h2>How we work</h2>
+      <p>
+        We&apos;ve actually already asked hundreds of women what they want, and
+        made a database with the results. All you have to do is take our short
+        survey that only takes seconds, and our proprietary algorithm will match
+        you with a few perfect gift options.
+      </p>
+      <button type="button">Learn More</button>
+
+      <!-- Posts -->
+      <section>
+        <h2>Gifts for all Occasions</h2>
+        <p>
+          &quot;Try our web app to find the best gifts for all occasions&quot;
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/birthday.jpg"
+              alt="photo with birthday"
+              width="270"
+              height="270"
+            />
+            <h3>Birthday</h3>
+            <p>See More &gt;</p>
+          </li>
+          <li>
+            <img
+              src="./images/anniversary.jpg"
+              alt="photo with anniversary"
+              width="270"
+              height="270"
+            />
+            <h3>Anniversary</h3>
+            <p>See More &gt;</p>
+          </li>
+          <li>
+            <img
+              src="./images/valentine's day.jpg"
+              alt="photo with valentine's day"
+              width="270"
+              height="270"
+            />
+            <h3>Valentine&apos;s Day</h3>
+            <p>See More &gt;</p>
+          </li>
+          <li>
+            <img
+              src="./images/christmas.jpg"
+              alt="photo with christmas"
+              width="270"
+              height="270"
+            />
+            <h3>Christmas</h3>
+            <p>See More &gt;</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- CTA -->
+      <section>
+        <h2>Ready Registration</h2>
+        <!-- прихований заголовок -->
+        <p><b>Ready to get started?</b></p>
+        <p>Sign up or contact us</p>
+        <button type="button">Find gift now</button>
+        <button type="button">how it works</button>
+      </section>
+
+      <!-- Posts Blog -->
+      <section>
+        <h2>Our Best Blogs Ever</h2>
+        <p>
+          &quot;Try our blog to find the best tips and tricks to select your
+          gift &quot;
+        </p>
+        <img
+          src="./images/media-img.jpg"
+          alt="photo media img"
+          width="400"
+          height="370"
+        />
+        <p>Mr. John Doe</p>
+        <h2>The best way to wish your wife</h2>
+        <a href="">Read More</a>
+        <ul>
+          <li>
+            <h3>Database to find the gifts for your girlfriend</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore...
+            </p>
+            <a href="">Read More</a>
+          </li>
+          <li>
+            <h3>
+              How Artificial Intelligence read your mind to find the best gift
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore...
+            </p>
+            <a href="">Read More</a>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
       <ul>
         <li><a href="">Home</a></li>
         <li><a href="">About Us</a></li>
+      </ul>
+      <a href=""
+        ><img src="./images/Logo.svg" alt="logo" width="41" height="39"
+      /></a>
+      <ul>
         <li><a href="">Services</a></li>
         <li><a href="">Blogs</a></li>
       </ul>
-      <button type="button">Gift Finder</button>
-    </header>
-    <main></main>
-    <footer></footer>
+      <p>&copy; 2010 — 2020</p>
+      <a href="">Privacy — Terms</a>
+    </footer>
   </body>
 </html>
