--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GSWT</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
-      <a href=""
-        ><img src="./images/Logo.svg" alt="logo" width="41" height="39"
-      /></a>
       <nav>
+        <a href=""
+          ><img src="./images/Logo.svg" alt="logo" width="41" height="39"
+        /></a>
+
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">About Us</a></li>
