розмічені стилі кольору та шрифту в header та секції  hero

--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href=""
+        <a href="" class="link"
           ><img src="./images/Logo.svg" alt="logo" width="41" height="39"
         /></a>
 
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Blogs</a></li>
+        <ul class="list">
+          <li><a href="" class="nav-link link">Home</a></li>
+          <li><a href="" class="nav-link link">About Us</a></li>
+          <li><a href="" class="nav-link link">Services</a></li>
+          <li><a href="" class="nav-link link">Blogs</a></li>
         </ul>
       </nav>
-      <button type="button">Gift Finder</button>
+      <button type="button" class="secondaru-btn">Gift Finder</button>
     </header>
 
     <main>
       <!-- Hero Side -->
-      <section>
-        <h1>Find a gift for your wife or girlfriend</h1>
-        <p>
+      <section class="hero-side">
+        <h1 class="hero-title">Find a gift for your wife or girlfriend</h1>
+        <p class="hero-text">
           Struggling to find a gift for your wife or girlfriend? No problem!
         </p>
-        <button type="button">Find gift now</button>
+        <button type="button" class="primary-btn">Find gift now</button>
         <img
           src="./images/main-background.jpg"
           alt="photo main-background"
@@ -47,6 +47,7 @@
       </section>
 
       <!-- Feature Split -->
+      <section class="feature-split">
       <img
         src="./images/media- background.jpg"
         alt="photo media background"
@@ -68,7 +69,7 @@
         <p>
           &quot;Try our web app to find the best gifts for all occasions&quot;
         </p>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/birthday.jpg"
@@ -137,15 +138,15 @@
         />
         <p>Mr. John Doe</p>
         <h2>The best way to wish your wife</h2>
-        <a href="">Read More</a>
-        <ul>
+        <a href="" class="link">Read More</a>
+        <ul class="list">
           <li>
             <h3>Database to find the gifts for your girlfriend</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore...
             </p>
-            <a href="">Read More</a>
+            <a href="" class="link">Read More</a>
           </li>
           <li>
             <h3>
@@ -155,26 +156,26 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore...
             </p>
-            <a href="">Read More</a>
+            <a href="" class="link">Read More</a>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About Us</a></li>
+      <ul class="list">
+        <li><a href="" class="link">Home</a></li>
+        <li><a href="" class="link">About Us</a></li>
       </ul>
-      <a href=""
+      <a href="" class="link"
         ><img src="./images/Logo.svg" alt="logo" width="41" height="39"
       /></a>
-      <ul>
-        <li><a href="">Services</a></li>
-        <li><a href="">Blogs</a></li>
+      <ul class="list">
+        <li><a href="" class="link">Services</a></li>
+        <li><a href="" class="link">Blogs</a></li>
       </ul>
       <p>&copy; 2010 — 2020</p>
-      <a href="">Privacy — Terms</a>
+      <a href="" class="link">Privacy — Terms</a>
     </footer>
   </body>
 </html>
