стилізовано шрифти та кольори елементів на сторінці

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GSWT</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -48,134 +49,142 @@
 
       <!-- Feature Split -->
       <section class="feature-split">
-      <img
-        src="./images/media- background.jpg"
-        alt="photo media background"
-        width="733"
-        height="619"
-      />
-      <h2>How we work</h2>
-      <p>
-        We&apos;ve actually already asked hundreds of women what they want, and
-        made a database with the results. All you have to do is take our short
-        survey that only takes seconds, and our proprietary algorithm will match
-        you with a few perfect gift options.
-      </p>
-      <button type="button">Learn More</button>
+        <img
+          src="./images/media-background.jpg"
+          alt="photo media background"
+          width="733"
+          height="619"
+        />
+        <h2 class="secondary-title">How we work</h2>
+        <p class="feature-text">
+          We&apos;ve actually already asked hundreds of women what they want,
+          and made a database with the results. All you have to do is take our
+          short survey that only takes seconds, and our proprietary algorithm
+          will match you with a few perfect gift options.
+        </p>
+        <button type="button" class="secondaru-btn">Learn More</button>
+      </section>
 
       <!-- Posts -->
       <section>
-        <h2>Gifts for all Occasions</h2>
-        <p>
+        <h2 class="secondary-title">Gifts for all Occasions</h2>
+        <p class="posts-text">
           &quot;Try our web app to find the best gifts for all occasions&quot;
         </p>
         <ul class="list">
-          <li>
+          <li class="posts-item">
             <img
               src="./images/birthday.jpg"
               alt="photo with birthday"
               width="270"
               height="270"
             />
-            <h3>Birthday</h3>
-            <p>See More &gt;</p>
+            <h3 class="posts-title">Birthday</h3>
+            <p class="more-text">See More &gt;</p>
           </li>
-          <li>
+          <li class="posts-item">
             <img
               src="./images/anniversary.jpg"
               alt="photo with anniversary"
               width="270"
               height="270"
             />
-            <h3>Anniversary</h3>
-            <p>See More &gt;</p>
+            <h3 class="posts-title">Anniversary</h3>
+            <p class="more-text">See More &gt;</p>
           </li>
-          <li>
+          <li class="posts-item">
             <img
-              src="./images/valentine's day.jpg"
+              src="./images/valentine's-day.jpg"
               alt="photo with valentine's day"
               width="270"
               height="270"
             />
-            <h3>Valentine&apos;s Day</h3>
-            <p>See More &gt;</p>
+            <h3 class="posts-title">Valentine&apos;s Day</h3>
+            <p class="more-text">See More &gt;</p>
           </li>
-          <li>
+          <li class="posts-item">
             <img
               src="./images/christmas.jpg"
               alt="photo with christmas"
               width="270"
               height="270"
             />
-            <h3>Christmas</h3>
-            <p>See More &gt;</p>
+            <h3 class="posts-title">Christmas</h3>
+            <p class="more-text">See More &gt;</p>
           </li>
         </ul>
       </section>
 
       <!-- CTA -->
-      <section>
-        <h2>Ready Registration</h2>
+      <section class="section-cta">
+        <h2 class="secondary-title cta-title">Ready Registration</h2>
         <!-- прихований заголовок -->
-        <p><b>Ready to get started?</b></p>
-        <p>Sign up or contact us</p>
-        <button type="button">Find gift now</button>
-        <button type="button">how it works</button>
+        <p class="ready-text"><b>Ready to get started?</b></p>
+        <p class="sing-text">Sign up or contact us</p>
+        <button type="button" class="button primary">Find gift now</button>
+        <button type="button" class="button secondary">how it works</button>
       </section>
 
       <!-- Posts Blog -->
       <section>
-        <h2>Our Best Blogs Ever</h2>
-        <p>
+        <h2 class="secondary-title">Our Best Blogs Ever</h2>
+        <p class="blog-text">
           &quot;Try our blog to find the best tips and tricks to select your
           gift &quot;
         </p>
-        <img
-          src="./images/media-img.jpg"
-          alt="photo media img"
-          width="400"
-          height="370"
-        />
-        <p>Mr. John Doe</p>
-        <h2>The best way to wish your wife</h2>
-        <a href="" class="link">Read More</a>
+        <div class="blog-fiature">
+          <img
+            src="./images/media-img.jpg"
+            alt="photo media img"
+            width="400"
+            height="370"
+          />
+          <p class="author">Mr. John Doe</p>
+          <h2 class="title-blog-one">
+            The best way to wish<br />
+            your wife
+          </h2>
+          <a href="" class="link-blog-one link">Read More</a>
+        </div>
         <ul class="list">
           <li>
-            <h3>Database to find the gifts for your girlfriend</h3>
-            <p>
+            <h3 class="title-card">
+              Database to find the gifts for your girlfriend
+            </h3>
+            <p class="card-blog-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore...
             </p>
-            <a href="" class="link">Read More</a>
+            <a href="" class="link-blog-card link">Read More</a>
           </li>
           <li>
-            <h3>
+            <h3 class="title-card">
               How Artificial Intelligence read your mind to find the best gift
             </h3>
-            <p>
+            <p class="card-blog-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore...
             </p>
-            <a href="" class="link">Read More</a>
+            <a href="" class="link-blog-card link">Read More</a>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <ul class="list">
+      <ul class="list-left list">
         <li><a href="" class="link">Home</a></li>
         <li><a href="" class="link">About Us</a></li>
       </ul>
       <a href="" class="link"
         ><img src="./images/Logo.svg" alt="logo" width="41" height="39"
       /></a>
-      <ul class="list">
+      <ul class="list-right list">
         <li><a href="" class="link">Services</a></li>
         <li><a href="" class="link">Blogs</a></li>
       </ul>
       <p>&copy; 2010 — 2020</p>
-      <a href="" class="link">Privacy — Terms</a>
+      <a href="" class="copir-link link">Privacy — Terms</a>
     </footer>
   </body>
 </html>
