налаштовано  препроцесор sass

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -79,6 +79,7 @@
               width="270"
               height="270"
             />
+
             <h3 class="posts-title">Birthday</h3>
             <p class="more-text">See More &gt;</p>
           </li>
